Update trial and subscription system with improved error handling and UI components

--- a/apps/docs/models-and-pricing.mdx
+++ b/apps/docs/models-and-pricing.mdx
@@ -338,11 +338,11 @@ All models use our unified **Cubent Units** system for transparent, predictable 
 
 *Grok 3 currently supports text modality only. Vision capabilities coming soon according to xAI.
 
-## BYAK Models (Bring Your API Key)
+## BYOK Models (Bring Your API Key)
 
 Access the latest models using your own API keys:
 
-### 🤖 **Anthropic BYAK**
+### 🤖 **Anthropic BYOK**
 - **Claude Sonnet 4** - Latest flagship model with vision
 - **Claude Sonnet 4 (Thinking)** - Advanced reasoning capabilities  
 - **Claude 4 Opus** - Most capable model for complex tasks
@@ -350,10 +350,10 @@ Access the latest models using your own API keys:
 - **Claude 3.7 Sonnet (Thinking)** - Advanced reasoning for complex problems
 - **Claude 3.5 Sonnet** - Balanced performance and speed
 
-### 💎 **Google BYAK**
+### 💎 **Google BYOK**
 - **Gemini 2.5 Pro** - Advanced reasoning and multimodal capabilities
 
-### 🚀 **xAI BYAK**
+### 🚀 **xAI BYOK**
 - **Grok 3** - Latest xAI model (text-only, vision coming soon)
 - **Grok 2 Vision** - Multimodal capabilities with vision support
 
@@ -426,10 +426,10 @@ Use **Claude 3.7 Sonnet (Thinking)** or **O3 Mini (High Reasoning)** for complex
 ## Frequently Asked Questions
 
 ### What happens when I run out of Cubent Units?
-You can upgrade your plan, wait for the monthly reset, or switch to BYAK models with your own API keys.
+You can upgrade your plan, wait for the monthly reset, or switch to BYOK models with your own API keys.
 
-### Can I mix built-in and BYAK models?
-Yes! You can use both built-in models (with Cubent Units) and BYAK models (with your API keys) in the same workspace.
+### Can I mix built-in and BYOK models?
+Yes! You can use both built-in models (with Cubent Units) and BYOK models (with your API keys) in the same workspace.
 
 ### How do thinking models work?
 Thinking models show their reasoning process, providing step-by-step analysis before giving their final answer.
