--- a/apps/docs/subscription-plans.mdx
+++ b/apps/docs/subscription-plans.mdx
@@ -49,7 +49,7 @@ For large organizations with custom requirements.
 - **Features**: All features + SSO, custom deployment, SLA
 - **Support**: Dedicated account manager + phone support
 
-### 🔑 **BYAK (Bring Your API Key)**
+### 🔑 **BYOK (Bring Your API Key)**
 Use your own API keys with any plan.
 
 - **Cost**: No additional charges from Cubent
@@ -95,10 +95,10 @@ Cubent Units provide a unified way to measure AI usage across different models:
 ## Frequently Asked Questions
 
 ### What happens when I run out of Cubent Units?
-You can upgrade your plan, wait for the monthly reset, or switch to BYAK models with your own API keys.
+You can upgrade your plan, wait for the monthly reset, or switch to BYOK models with your own API keys.
 
-### Can I mix built-in and BYAK models?
-Yes! You can use both built-in models (with Cubent Units) and BYAK models (with your API keys) in the same workspace.
+### Can I mix built-in and BYOK models?
+Yes! You can use both built-in models (with Cubent Units) and BYOK models (with your API keys) in the same workspace.
 
 ### Can I change plans anytime?
 Yes, you can upgrade or downgrade your plan at any time. Changes take effect at the next billing cycle.
