Fix webapp logout and Stripe trial settings
- Extend webapp automatic logout from 7 to 30 days in useAuthStatus.ts
- Add Stripe trial configuration to pause subscription when trial ends without payment method
- Prevents revenue loss by properly handling trial expiration scenarios

--- a/apps/docs/models-and-pricing.mdx
+++ b/apps/docs/models-and-pricing.mdx
@@ -338,7 +338,7 @@ All models use our unified **Cubent Units** system for transparent, predictable 
 
 *Grok 3 currently supports text modality only. Vision capabilities coming soon according to xAI.
 
-## BYOK Models (Bring Your API Key)
+## BYOK Models (Bring Your Own Key)
 
 Access the latest models using your own API keys:
 
