--- a/apps/docs/subscription-plans.mdx
+++ b/apps/docs/subscription-plans.mdx
@@ -49,7 +49,7 @@ For large organizations with custom requirements.
 - **Features**: All features + SSO, custom deployment, SLA
 - **Support**: Dedicated account manager + phone support
 
-### 🔑 **BYOK (Bring Your API Key)**
+### 🔑 **BYOK (Bring Your Own Key)**
 Use your own API keys with any plan.
 
 - **Cost**: No additional charges from Cubent
