Update documentation: favicon, logo styling, and Download Extension button

--- a/apps/docs/features/file-operations.mdx
+++ b/apps/docs/features/file-operations.mdx
@@ -36,7 +36,7 @@ Based on @package.json, what testing framework are we using?
 
 ### File Content Analysis
 
-Ask Cubent Coder to analyze specific files:
+Ask Cubent to analyze specific files:
 
 ```
 What does this file do? @src/services/auth.ts
@@ -54,7 +54,7 @@ Explain the purpose of each function in @utils/helpers.js
 
 ### New File Generation
 
-Cubent Coder can create complete files from scratch:
+Cubent can create complete files from scratch:
 
 ```
 Create a new React component for a product card that displays:
