--- a/apps/docs/first-steps.mdx
+++ b/apps/docs/first-steps.mdx
@@ -91,7 +91,7 @@ Are there any potential bugs here?
 
 ## File Operations
 
-Cubent Coder can work with files in your workspace:
+Cubent can work with files in your workspace:
 
 ### Reading Files
 
