--- a/apps/docs/introduction.mdx
+++ b/apps/docs/introduction.mdx
@@ -1,22 +1,22 @@
 ---
-title: Welcome to Cubent Coder
+title: Welcome to Cubent
 description: 'AI-Powered Autonomous Coding Agent for Visual Studio Code'
 ---
 
 <img
-  src="/images/Cubent.Dev.gif"
-  alt="Cubent Coder Interface - AI-powered coding assistant in action"
+  src="/images/Introducing Cubent - The Smartest AI Coder (15).gif"
+  alt="Cubent Interface - AI-powered coding assistant in action"
 />
 
-## What is Cubent Coder?
+## What is Cubent?
 
-**Cubent Coder** is an AI-powered autonomous coding agent that lives in your VS Code editor. It can communicate in natural language, read and write files directly in your workspace, run terminal commands, automate browser actions, and integrate with any OpenAI-compatible or custom API/model.
+**Cubent** is an AI-powered autonomous coding agent that lives in your VS Code editor. It can communicate in natural language, read and write files directly in your workspace, run terminal commands, automate browser actions, and integrate with any OpenAI-compatible or custom API/model.
 
-Whether you're seeking a flexible coding partner, a system architect, or specialized roles like a QA engineer or product manager, Cubent Coder can help you build software more efficiently.
+Whether you're seeking a flexible coding partner, a system architect, or specialized roles like a QA engineer or product manager, Cubent can help you build software more efficiently.
 
 ## Getting Started
 
-Ready to transform your coding experience? Let's get you set up with Cubent Coder.
+Ready to transform your coding experience? Let's get you set up with Cubent.
 
 <CardGroup cols={2}>
   <Card
@@ -24,7 +24,7 @@ Ready to transform your coding experience? Let's get you set up with Cubent Code
     icon="download"
     href="https://marketplace.visualstudio.com/items?itemName=cubent.cubent"
   >
-    Download Cubent Coder from the VS Code Marketplace
+    Download Cubent from the VS Code Marketplace
   </Card>
   <Card
     title="Quick Setup"
@@ -37,7 +37,7 @@ Ready to transform your coding experience? Let's get you set up with Cubent Code
 
 ## Key Features
 
-Discover what makes Cubent Coder the ultimate AI coding companion.
+Discover what makes Cubent the ultimate AI coding companion.
 
 <CardGroup cols={2}>
   <Card
@@ -52,7 +52,7 @@ Discover what makes Cubent Coder the ultimate AI coding companion.
     icon="robot"
     href="/features/agent-mode"
   >
-    Let Cubent Coder work independently on complex tasks with minimal supervision
+    Let Cubent work independently on complex tasks with minimal supervision
   </Card>
   <Card
     title="Custom Modes"
@@ -72,7 +72,7 @@ Discover what makes Cubent Coder the ultimate AI coding companion.
 
 ## Community & Support
 
-Join thousands of developers using Cubent Coder worldwide.
+Join thousands of developers using Cubent worldwide.
 
 <CardGroup cols={3}>
   <Card
