--- a/apps/docs/community/discord.mdx
+++ b/apps/docs/community/discord.mdx
@@ -149,7 +149,7 @@ Earn roles based on your participation:
 
 - **Documentation**: [docs.cubent.dev](https://docs.cubent.dev)
 - **GitHub Repository**: [github.com/LaxBloxBoy2/Cubent](https://github.com/LaxBloxBoy2/Cubent)
-- **VS Code Marketplace**: [Cubent Coder Extension](https://marketplace.visualstudio.com/items?itemName=cubent.cubent)
+- **VS Code Marketplace**: [Cubent Extension](https://marketplace.visualstudio.com/items?itemName=cubent.cubent)
 - **Reddit Community**: [r/cubent](https://www.reddit.com/r/cubent/)
 
 ### Useful Bots
