--- a/apps/docs/installation.mdx
+++ b/apps/docs/installation.mdx
@@ -1,11 +1,11 @@
 ---
 title: Installation & Setup
-description: 'Get started with Cubent Coder in just a few minutes'
+description: 'Get started with Cubent in just a few minutes'
 ---
 
 ## Prerequisites
 
-Before installing Cubent Coder, make sure you have:
+Before installing Cubent, make sure you have:
 
 - **Visual Studio Code** (version 1.70.0 or higher)
 - An **AI provider account** (OpenAI, Anthropic, or custom API)
@@ -17,8 +17,8 @@ Before installing Cubent Coder, make sure you have:
 
 1. Open Visual Studio Code
 2. Go to the Extensions view (`Ctrl+Shift+X` or `Cmd+Shift+X`)
-3. Search for "Cubent Coder"
-4. Click **Install** on the official Cubent Coder extension
+3. Search for "Cubent"
+4. Click **Install** on the official Cubent extension
 
 ### From Command Line
 
@@ -40,7 +40,7 @@ After installation, you'll need to configure your AI provider:
 ### OpenAI Setup
 
 1. Get your API key from [OpenAI Platform](https://platform.openai.com/api-keys)
-2. Open Cubent Coder settings in VS Code
+2. Open Cubent settings in VS Code
 3. Enter your OpenAI API key
 4. Select your preferred model (GPT-4 recommended)
 
@@ -73,7 +73,7 @@ Configure these essential settings for optimal experience:
 ### Workspace Setup
 
 1. Open your project in VS Code
-2. Cubent Coder will automatically index your codebase
+2. Cubent will automatically index your codebase
 3. Wait for the initial indexing to complete
 4. You're ready to start coding with AI!
 
@@ -81,7 +81,7 @@ Configure these essential settings for optimal experience:
 
 To verify your installation:
 
-1. Open the Cubent Coder panel (sidebar icon)
+1. Open the Cubent panel (sidebar icon)
 2. Try a simple command: "Hello, can you help me?"
 3. You should receive a response from your AI provider
 
@@ -91,7 +91,7 @@ If you encounter any issues during installation, join our [Discord community](ht
 
 ## Next Steps
 
-Now that you have Cubent Coder installed:
+Now that you have Cubent installed:
 
 <CardGroup cols={2}>
   <Card
