Update images for Autocomplete and MCP Tools sections
- Replace Autocomplete section image with 45.png
- Replace MCP Tools section image with Cubent.Dev (62).png
- Copy new image files to public/images directory
- Update both desktop and mobile image references in mockup.tsx

--- a/apps/docs/models-and-pricing.mdx
+++ b/apps/docs/models-and-pricing.mdx
@@ -343,8 +343,9 @@ All models use our unified **Cubent Units** system for transparent, predictable 
 Access the latest models using your own API keys:
 
 ### 🤖 **Anthropic BYOK**
+- **Claude Opus 4.1** - Our most capable and intelligent model yet with superior reasoning
 - **Claude Sonnet 4** - Latest flagship model with vision
-- **Claude Sonnet 4 (Thinking)** - Advanced reasoning capabilities  
+- **Claude Sonnet 4 (Thinking)** - Advanced reasoning capabilities
 - **Claude 4 Opus** - Most capable model for complex tasks
 - **Claude 4 Opus (Thinking)** - Advanced reasoning + maximum capability
 - **Claude 3.7 Sonnet (Thinking)** - Advanced reasoning for complex problems
